--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ body {
     background-color: rgb(199, 222, 189);
 }
 
+h1 {
+    font-family: cursive;
+    font-size: calc(2rem + 2vw + 2vh);
+}
+
 #title {
     /*  */
     width: 100vw;
@@ -14,9 +19,13 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-
+    /* Background of header design */
     background-color: rgb(98, 123, 101);
     background-size: contain;
-    font-family: cursive;
-    font-size: 100px;
+    height: 130px;
+    color: floralwhite;
+    /* Border style */
+    border-style: solid;
+    border-width: 0.5vw;
+    border-radius: 5px;
 }
