--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ h1 {
     border-style: solid;
     border-width: 0.5vw;
     border-radius: 5px;
+    /* Border spacing */
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 451px;
@@ -37,4 +38,17 @@ h1 {
     height: 130px;
     color: floralwhite;
 
+}
+
+#cover-image {
+    width: 100vw;
+    height: 400px;
+    justify-content: center;
+    align-items: center;
+}
+
+#cov-img {
+    width: 70%;
+    object-fit: cover;
+    object-position: 50% 50%;
 }
