--- a/style.css
+++ b/style.css
@@ -5,10 +5,12 @@
     margin: 0;
 }
 
+/* bg color for page */
 body {
     background-color: rgb(199, 222, 189);
 }
 
+/* Heading styles */
 h1 {
     font-family: "Rowdies", sans-serif;
     font-size: calc(2rem + 2vw + 2vh);
@@ -23,9 +25,11 @@ h1 {
     padding-right: 451px;
 }
 
+/* Title styles */
 #title {
     /* width set to viewpoint */
     width: 100vw;
+    height: 50px;
 
     /* center content vertically and horizontally */
     display: flex;
@@ -40,14 +44,16 @@ h1 {
 
 }
 
-#cover-image {
+/* Cover image styling */
+#cover-div {
     width: 100vw;
-    height: 400px;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
 
 #cov-img {
+    height: 400px;
     width: 70%;
     object-fit: cover;
     object-position: 50% 50%;
