--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h1 {
 
 }
 
-/* Cover image styling */
+/* Cover div styling */
 #cover-div {
     width: 100vw;
     display: flex;
@@ -52,6 +52,7 @@ h1 {
     align-items: center;
 }
 
+/* Cover image styling */
 #cov-img {
     height: 500px;
     width: 70%;
