--- a/style.css
+++ b/style.css
@@ -51,6 +51,9 @@ h1 {
     color: floralwhite;
 
 }
+#cover-div {
+    margin: 20px;
+}
 
 /* Cover image styling */
 #cov-img {
@@ -63,8 +66,6 @@ h1 {
 }
 
 #grid-images {
-    /* height: 400px; */
-    /* width: 20%; */
     display: flex;
     flex-direction: column;
 }
