--- a/style.css
+++ b/style.css
@@ -35,9 +35,19 @@ h1 {
     align-items: center;
 }
 
+.flex-col {
+    flex-direction: col;
+}
+
 /* One class for width instead or repeating */
 .full-width {
     width: 100vw;
+}
+
+.card img{
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
 }
 
 /* Title styling */
@@ -65,7 +75,7 @@ h1 {
     object-position: 50% 50%;
 }
 
-#grid-images {
+#gallery {
     display: flex;
     flex-direction: column;
 }
