--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ h1 {
     align-items: center;
 }
 
+/* Arranges images in a column */
 .flex-col {
     flex-direction: col;
 }
@@ -44,6 +45,7 @@ h1 {
     width: 100vw;
 }
 
+/* Makes images same size */
 .card img{
     width: 300px;
     height: 300px;
@@ -61,6 +63,7 @@ h1 {
     color: floralwhite;
 
 }
+/* adds space around title */
 #cover-div {
     margin: 20px;
 }
