--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ h1 {
 
 /* Arranges images in a column */
 .flex-col {
-    flex-direction: col;
+    flex-direction: column;
 }
 
 /* One class for width instead or repeating */
@@ -79,8 +79,28 @@ h1 {
     object-position: 50% 50%;
 }
 
-/* positioning of images */
-#gallery {
-    display: flex;
-    flex-direction: column;
+
+/* Gallery styles */
+#gallery-div {
+    width: 70%;
+    display: grid;
+    grid-template-areas:
+        "item1 item2 item3 item4";
+}
+
+/* gallery items */
+#item1 {
+    grid-area: item1;
+}
+
+#item2 {
+    grid-area: item2;
+}
+
+#item3 {
+    grid-area: item3;
+}
+
+#item4 {
+    grid-area: item4;
 }
