--- a/style.css
+++ b/style.css
@@ -45,9 +45,13 @@ h1 {
     width: 100vw;
 }
 
+.card {
+    width: 300px;
+}
+
 /* Makes images same size */
 .card img{
-    width: 300px;
+    width: 100%;
     height: 300px;
     object-fit: cover;
 }
@@ -82,11 +86,32 @@ h1 {
 
 /* Gallery styles */
 #gallery-div {
-    width: 70%;
     display: grid;
+    justify-content: center;
     grid-template-areas:
         "item1 item2 item3 item4";
 }
+
+/* Changes item layout for a smaller size of screen */
+@media (max-width: 800px) {
+    #gallery-div {
+        grid-template-areas: 
+            "item1 item2"
+            "item3 item4";
+    }
+}
+
+/* Changes item layout for a much smaller size of screen */
+@media (max-width: 500px) {
+    #gallery-div {
+        grid-template-areas:
+            "item1"
+            "item2"
+            "item3"
+            "item4"
+    }
+}
+
 
 /* gallery items */
 #item1 {
